Build: Support Java 17