@@ -90,7 +90,27 @@ subprojects {
         options.forkOptions.jvmArgs += ["-Xss8M"]
     }
 
+    def extraJvmArgs = [
+            "-XX:+IgnoreUnrecognizedVMOptions",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.net=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+            "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+            "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+            "-Djdk.reflect.useDirectMethodHandle=false"
+    ]
+
     test {
+        jvmArgs += extraJvmArgs
         maxParallelForks = 1
         environment("ROOT_PROJECT_DIR", rootProject.projectDir)
         tags {
@@ -99,6 +119,7 @@ subprojects {
     }
 
     tasks.register('slowTest', Test) {
+        jvmArgs += extraJvmArgs
         maxParallelForks = 1
         environment("ROOT_PROJECT_DIR", rootProject.projectDir)
         tags {
